samples/_failures_safe/1761430891_abf3fe_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77be8183.c: In function ‘main’:
./samples/SAFE/__tmp_77be8183.c:159:5: error: expected declaration or statement at end of input
  159 |     }
      |     ^
